--- a/5DEEP/Project/requirements.txt
+++ b/5DEEP/Project/requirements.txt
@@ -1,5 +1,12 @@
 jupyter~=1.0.0
+numpy~=1.23.5
 pandas~=1.5.2
+matplotlib~=3.6.2
 librosa~=0.9.2
+scikit-learn~=1.1.3
+tensorflow~=2.10.0
+pydot~=1.4.1
+pydotplus~=2.0.2
+graphviz~=2.50.0
 tqdm~=4.64.1
 colorama~=0.4.4
