--- a/5MLDE/Project/jupyter-server/requirements.txt
+++ b/5MLDE/Project/jupyter-server/requirements.txt
@@ -15,6 +15,7 @@ great_expectations
 fastapi
 pyngrok
 uvicorn
+locust
 
 # Linting
 pre-commit
@@ -24,5 +25,7 @@ flake8==6.0.0  # be sure to change the version in .pre-commit-config.yaml to mat
 isort==5.12.0  # be sure to change the version in .pre-commit-config.yaml to match
 
 # Misc.
+requests
 gdown
 colorama
+pydantic
